--- a/Groceries-App-Backend/pom.xml
+++ b/Groceries-App-Backend/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.ravinduw.apps.groceries</groupId>
     <artifactId>Groceries-App-Backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Groceries-App-Backend</name>
     <description>Groceries-App-Backend</description>
     <url/>
